# zc702_ad9467fmc

./: .gitignore
test/: .clang-format  CMakeLists.txt  adc_spi.sh  axi_transfer.c  test_dma.c  zc702_ad9467fmc.c
zc702_ad9467fmc.srcs/constrs_1/new/: pins.xdc
zc702_ad9467fmc.srcs/sources_1/bd/design_1/: .gitignore  design_1.bd
